<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guesstimate</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="show_gps">Show GPS</string>
    <string name="title_activity_show_gps">ShowGPSActivity</string>
    <string name="gpsStatus">GPS Status</string>
    <string name="lat">Latitude</string>
    <string name="empty">--</string>
    <string name="longitude">Longitude</string>
    <string name="sat">Satellites in View</string>
    <string name="qual">Signalqualität</string>
    <string name="prov">Location Provider</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="bind_service">Bind Service</string>
    <string name="read_value">Read Value</string>
    <string name="unbind_service">Unbind Service</string>
    <string name="enter_guesstimate">Guess Distance</string>
    <string name="start">Start</string>
    <string name="high_score">High Score</string>
    <string name="howto">How To Play</string>
    <string name="about">About</string>
    <string name="title_activity_start">Guesstimate</string>
    <string name="hello_world">Hello world!</string>

    <string-array name="difficulty">
        <item>Easy</item>
        <item>Normal</item>
    </string-array>

    <string name="choosediff">Choose Difficulty</string>
    <string name="title_activity_how_to">How To Play</string>
    <string name="title_activity_about">About Guesstimate</string>
    <string name="developer">Developer:</string>
    <string name="paul">Paul Birkenkampf</string>
    <string name="denis">Denis Hamann</string>
    <string name="lukas">Lukas Schwöbel</string>
    <string name="mobile_ass">Mobile Assistance Systems</string>
    <string name="c2013">(c) 2013</string>
    <string name="easydescprition">Easy Difficulty:\nWhen you start the game, the map with four
        markers will show up. If you tap on a markers on the map you can guess the distance to this
        point. Based on your guessed distances to four map markers, a point will be calculated where
        you should be if your estimates would be correct. You then have to go within a certain
        radius of this point before you can take a guess for the next four points. The goal of this
        game is to go to as many points as possible in a 30 minutes.
    </string>
    <string name="normaldescprition">Normal Difficulty:\nWhen you started the game you have to guess
        four distances to four well known points. Based on your guessed distances a point will be
        calculated where you should be if your estimates would be correct. You then have to go
        within a certain radius of this point before you can take a guess for the next four points.
        The goal of this game is to go to as many points as possible in a 30 minutes.
    </string>
    <string name="real_lateration">Use Real Lateration</string>
    <string name="title_activity_guess">Guesstimate</string>
    <string name="title_activity_high_score">Guesstimate - High Score</string>

</resources>